completing the PSMO surface
